# tbot_walker

./: CMakeLists.txt  LICENSE  Readme.md  package.xml
include/: walker.hpp
launch/: spawn_tbot.py  spawn_tbot_waffle.py  walker.py
models/: world_small_box.sdf
models/waffle_pi/: model.config  model.sdf
results/: cppcheck  cpplint
results/walker_bag/: metadata.yaml
src/: main.cpp  walker.cpp
test/: main.cpp
